fdo#67870 WW8 filter: import zoom type

Change-Id: If919880b51bdb30d9afdb168dae8f84dbfe18524